objects/NAICS_SFDC2__c.object
<CustomObject>
    <description>Look up table North American Industry Classification System (NAICS) to classify businesses. SFDC2</description>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <externalId>true</externalId>
        <label>NAICS Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NAICS_Industry_Description__c</fullName>
        <label>NAICS Industry Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Sector_Code__c</fullName>
        <label>NAICS Sector Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Sector_Description__c</fullName>
        <label>NAICS Sector Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Sub_Sector_Code__c</fullName>
        <label>NAICS Sub-Sector Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Sub_Sector_Description__c</fullName>
        <label>NAICS Sub-Sector Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NAICS</label>
    <nameField>
        <label>NAICS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>